--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CUE! - See You Everyday -</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="./lib/live2dcubismcore.min.js"></script>
-    <script type="module" crossorigin src="/assets/index.c76da0d0.js"></script>
+    <script type="module" crossorigin src="./assets/index.c76da0d0.js"></script>
   </head>
   <body>
     <div id="app"></div>
