--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <!-- Pixijs sound -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/@pixi/sound@5.0.0/dist/pixi-sound.js"></script> -->
         <!-- live2d SDK -->
-        <script src="./Lib/live2dcubismcore.min.js" type="text/javascript"></script>
+        <script src="./Libs/live2dcubismcore.min.js" type="text/javascript"></script>
         <!-- live2d pixijs plugin with 補丁-->
-        <script src="./Lib/cubism4.js" type="text/javascript"></script>
+        <script src="./Libs/cubism4.js" type="text/javascript"></script>
         <!-- live2d pixijs plugin-->
         <!-- <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/cubism4.min.js" type="text/javascript"></script> -->
         <!-- Live2d lib 補丁-->
