--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <!-- gsap Pixijs Plugin-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/PixiPlugin.min.js" type="text/javascript"></script>
 
+        <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+
         <!-- Game App -->
         <script src="./Core/GameApp.js" type="text/javascript"></script> 
         <!-- 腳本閱讀器 -->
