--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <!-- Pixijs sound -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/@pixi/sound@5.0.0/dist/pixi-sound.js"></script> -->
         <!-- live2d SDK -->
-        <script src="./Libs/live2dcubismcore.min.js" type="text/javascript"></script>
+        <script src="./Lib/live2dcubismcore.min.js" type="text/javascript"></script>
         <!-- live2d pixijs plugin with 補丁-->
-        <script src="./Libs/cubism4.js" type="text/javascript"></script>
+        <script src="./Lib/cubism4.js" type="text/javascript"></script>
         <!-- live2d pixijs plugin-->
         <!-- <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/cubism4.min.js" type="text/javascript"></script> -->
         <!-- Live2d lib 補丁-->
@@ -76,8 +76,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js" type="text/javascript"></script>
         <!-- gsap Pixijs Plugin-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/PixiPlugin.min.js" type="text/javascript"></script>
-
-        <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
 
         <!-- Game App -->
         <script src="./Core/GameApp.js" type="text/javascript"></script> 
@@ -95,10 +93,14 @@
         <script src="./Core/MessageManager.js" type="text/javascript"></script>
         <!-- 圖片 -->
         <script src="./Core/StillManager.js" type="text/javascript"></script>
+        <!-- 影片 -->
+        <script src="./Core/MoiveManager.js" type="text/javascript"></script>
         <!-- 聲音 -->
         <script src="./Core/SoundManager.js" type="text/javascript"></script>
         <!-- 翻譯檔案閱讀器 -->
         <script src="./Core/TranslateReader.js" type="text/javascript"></script>
+        <!-- 雜項 -->
+        <script src="./Core/MiscManager.js" type="text/javascript"></script>
         <!-- 入口 -->
         <script src="./Core/core.js" type="text/javascript"></script>
     </body>
